# mastarija.com

./: .gitignore  blog.html  cabal.project  index.html  mastarija-com.cabal  post.html
.github/workflows/: deploy.yaml
app/: Main.hs
css/: conf.css  core.css  dark.css  fair.css  main.css  menu.css  typo.css
lib/Mastarija/: Data.hs  Domain.hs  Make.hs  Maker.hs
src/blog/: blog.md
src/blog/kids/the-initialisation/: the-initialisation.md
src/blog/kids/translating-godot-coordinates/: translating-godot-coordinates.md
src/code/: code.md
src/home/: home.md
src/pages/: blog.md  code.md  home.md  work.md
src/posts/: haskell-generics.md
src/work/: work.md
tpl/: blog.html  footer.html  head.html  header.html  main.mustache  page.html  page.mustache  post.html  work.html
tpl/css/: main.css  typo.css
tpl/fnt/: Vollkorn.css
tpl/jsc/: main.js
www/: index.html
