cabal-version     : 3.0
name              : mastarija-com
version           : 0.1.0.0
author            : Maštarija
maintainer        : 51950685+mastarija@users.noreply.github.com
build-type        : Simple

common core
  build-depends   : base
                  , text
                  , aeson
                  , shake
                  , slick
  default-language: Haskell2010

library
  import          : core
  hs-source-dirs  : lib
  exposed-modules : Mastarija.Make
                  , Mastarija.Data

executable mastarija-com
  import          : core
  main-is         : Main.hs
  build-depends   : mastarija-com
  hs-source-dirs  : app
