cabal-version       : 3.6
version             : 0.0.0.0

name                : mastarija-com
build-type          : Simple

common core
  build-depends     : base
  default-language  : Haskell2010

library
  import            : core
  build-depends     : text
                    , time
                    , path
                    , path-io
                    , aeson
                    , lucid
                    , mmark
                    , filepath
                    , directory
                    , microstache
                    , transformers

  hs-source-dirs    : lib
  exposed-modules   : Mastarija.Make
                    , Mastarija.Data

executable demon
  import            : core
  main-is           : Main.hs
  build-depends     : mastarija-com
  hs-source-dirs    : app
